removed other tools, did some refactoring

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -12,12 +12,10 @@
   <body>
     <p>
       <form name="toolForm">
-	<input type="radio" name="toolRadios" value="line"> Line <br>
-	<input type="radio" name="toolRadios" value="rect"> Rect <br>
-	<input type="radio" name="toolRadios" value="pencil"> Pencil <br>
 	<input type="radio" name="toolRadios" value="node"> Node <br>
 	<input type="radio" name="toolRadios" value="edge"> Edge <br>
       </form>
+      <button id = "clear_button" type = "button">Clear All</button>
     </p>
 
     <div id="container">
