fleshed out eraser tool

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -14,6 +14,7 @@
       <form name="toolForm">
 	<input type="radio" name="toolRadios" value="node"> Node <br>
 	<input type="radio" name="toolRadios" value="edge"> Edge <br>
+	<input type="radio" name="toolRadios" value="eraser"> Eraser <br>
       </form>
       <button id = "clear_button" type = "button">Clear All</button>
     </p>
