--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -26,6 +26,12 @@
       </canvas>
     </div>
 
+    <div>
+      <textarea id ="textArea" rows="30" cols = "40" readonly="true">
+	hi and stuff
+      </textarea>
+    <script type="text/javascript"
+    src="graphDraw.js"></script>
     <script type="text/javascript" 
     src="graphVisualizer.js"></script>
   </body>
