added skeleton for algorithm and visualization logic

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -17,6 +17,7 @@
 	<input type="radio" name="toolRadios" value="eraser"> Eraser <br>
       </form>
       <button id = "clear_button" type = "button">Clear All</button>
+      <button id = "finish_button" type = "button">Done Drawing</button>
     </p>
 
     <div id="container">
@@ -32,6 +33,8 @@
       </textarea>
     <script type="text/javascript"
     src="graphDraw.js"></script>
+    <script type="text/javascript"
+    src="graphLogic.js"></script>
     <script type="text/javascript" 
     src="graphVisualizer.js"></script>
   </body>
