--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -2,35 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Graph Visualizer</title>
-    <style type="text/css"><!--
-      #container { position: relative; }
-      #imageView { border: 1px solid #000; }
-      #imageTemp { position: absolute; top: 1px; left: 1px; }
-    --></style>
+    <title>Maximum Matching</title>
+    <link rel="stylesheet" href="gv.css">
   </head>
   <body>
-    <p>
-      <form name="toolForm">
-	<input type="radio" name="toolRadios" value="node"> Node <br>
-	<input type="radio" name="toolRadios" value="edge"> Edge <br>
-	<input type="radio" name="toolRadios" value="eraser"> Eraser <br>
-      </form>
-      <button id = "clear_button" type = "button">Clear All</button>
-      <button id = "finish_button" type = "button">Done Drawing</button>
-    </p>
-
-    <div id="container">
-      <canvas id="imageView" width="600" height="500">
-        <p>Unfortunately, your browser is currently unsupported by our web 
-        application. Please try another browser, such as Chrome or Firefox instead. </p>
-      </canvas>
+    <div id="topdiv">
+      <div id="controlsdiv">
+	<p>
+	  <form name="toolForm">
+	    <input type="radio" name="toolRadios" value="node"> Node <br>
+	    <input type="radio" name="toolRadios" value="edge"> Edge <br>
+	    <input type="radio" name="toolRadios" value="eraser"> Eraser <br>
+	  </form>
+	  <button id = "clear_button" type = "button">Clear All</button>
+	  <button id = "finish_button" type = "button">Done Drawing</button>
+	</p>
+      </div>
+      <div id="titlediv">
+	The Maximum Matching Algorithm
+      </div>
     </div>
+    <div id="div1">
+      <div id="canvasdiv">
+	<canvas id="imageView" width="600" height="500">
+	  <p>Unfortunately, your browser is currently unsupported by our web 
+	  application. Please try another browser, such as Chrome or Firefox instead. </p>
+	</canvas>
+      </div>
 
-    <div>
-      <textarea id ="textArea" rows="30" cols = "40" readonly="true">
-	hi and stuff
-      </textarea>
+      <div id="textdiv">
+	<textarea id ="textBox" rows="30" cols = "40" readonly="true">
+	  hi and stuff
+	</textarea>
+      </div>
+    </div>
     <script type="text/javascript"
     src="graphDraw.js"></script>
     <script type="text/javascript"
