more state info

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -17,8 +17,13 @@
 	  <button id = "clear_button" type = "button">Clear All</button>
 	</p>
       </div>
-      <div id="titlediv">
-	The Maximum Matching Algorithm
+      <div id="bothtitlediv">
+	<div id="titlediv">
+	  Maximum Matching
+	</div>
+	<div id="subtitlediv">
+	  The Hungarian Algorithm
+	</div>
       </div>
     </div>
     <div id="div1">
