changed state mechanism again

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -39,7 +39,8 @@
 	  <textarea id ="textBox" rows="25" cols = "40" readonly="true">
 	  </textarea>
 	</div>
-	<button id = "continue_button" type = "button">Continue</button>
+	<button id = "back_button" type = "button"><--</button>
+	<button id = "continue_button" type = "button">--></button>
       </div>
     </div>
     <script type="text/javascript"
