added our names

--- a/graphVisualizer.html
+++ b/graphVisualizer.html
@@ -49,5 +49,8 @@
     src="graphLogic.js"></script>
     <script type="text/javascript" 
     src="graphVisualizer.js"></script>
+    <div id="footer">
+      CS270 - Spring 2013 <br> Eric Hong<br> Peter Cheng 
+    </div>
   </body>
 </html>
